# fluid_sim

./: Cargo.toml  README.md
src/: main.rs
src/fluid_sim/: dom.rs  mod.rs  vec2.rs
src/render/: mod.rs  shader.wgsl  shader2.wgsl  vertex.rs
