[package]
name = "flowing_with_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.0"
bytes = "1.10.1"
clap = "4.5.37"
env_logger = "0.11.8"
itertools = "0.14.0"
pollster = "0.4.0"
tinyvec = "1.9.0"
tracing = "0.1.41"
wgpu = "25.0.0"
winit = "0.29"
cgmath = "0.18"
rand = "0.9.1"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png", "jpeg"]
